--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Anasayfa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Randevu/Randevular.html">Randevu</a>
+            <a class="nav-link" href="./Randevu/Randevular.html">Randevu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/kampanyalar/kampanyalar.html">Kampanyalar</a>
+            <a class="nav-link" href="./kampanyalar/kampanyalar.html">Kampanyalar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gallery/index.html">Galeri</a>
+            <a class="nav-link" href="./gallery/index.html">Galeri</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Randevu/about.html">Hakkımızda</a>
+            <a class="nav-link" href="./Randevu/about.html">Hakkımızda</a>
           </li>
         </ul>
       </div>
