--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Anasayfa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Randevu/Randevular.html">Randevu</a>
+            <a class="nav-link" href="/root/Randevu/Randevular.html">Randevu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./kampanyalar/kampanyalar.html">Kampanyalar</a>
