--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/root/index.html">Anasayfa</a>
+            <a class="nav-link active" aria-current="page" href="root/index.html">Anasayfa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/root/Randevu/Randevular.html">Randevu</a>
+            <a class="nav-link" href="root/Randevu/Randevular.html">Randevu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/root/kampanyalar/kampanyalar.html">Kampanyalar</a>
+            <a class="nav-link" href="root/kampanyalar/kampanyalar.html">Kampanyalar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/root/gallery/index.html">Galeri</a>
+            <a class="nav-link" href="root/gallery/index.html">Galeri</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/root/Randevu/about.html">Hakkımızda</a>
+            <a class="nav-link" href="root/Randevu/about.html">Hakkımızda</a>
           </li>
         </ul>
       </div>
