--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <a class="navbar-brand"
         href="https://www.instagram.com/kizilayprotez.pinar?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
-        <img src="/medya/logo.jpg" width="50rem" style="border-radius: 50%;" alt="">
+        <img src="./medya/logo.jpg" width="50rem" style="border-radius: 50%;" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,19 +28,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Anasayfa</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">Anasayfa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Randevu/Randevular.html">Randevu</a>
+            <a class="nav-link" href="./Randevu/Randevular.html">Randevu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/kampanyalar/kampanyalar.html">Kampanyalar</a>
+            <a class="nav-link" href="./kampanyalar/kampanyalar.html">Kampanyalar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gallery/index.html">Galeri</a>
+            <a class="nav-link" href="./gallery/index.html">Galeri</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Randevu/about.html">Hakkımızda</a>
+            <a class="nav-link" href="./Randevu/about.html">Hakkımızda</a>
           </li>
         </ul>
       </div>
@@ -54,227 +54,227 @@
     </div>
 
     <div class="photos">
-      <a href="/medya/b1.jpg" data-fancybox="gallery">
-        <img src="/medya/b1.jpg" width="200px" />
+      <a href="./medya/b1.jpg" data-fancybox="gallery">
+        <img src="./medya/b1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/brwn1.jpg" data-fancybox="gallery">
-        <img src="/medya/brwn1.jpg" width="200px" />
+      <a href="./medya/brwn1.jpg" data-fancybox="gallery">
+        <img src="./medya/brwn1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/c1.jpg" data-fancybox="gallery">
-        <img src="/medya/c1.jpg" width="200px" />
+      <a href="./medya/c1.jpg" data-fancybox="gallery">
+        <img src="./medya/c1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p1.jpg" data-fancybox="gallery">
-        <img src="/medya/p1.jpg" width="200px" />
+      <a href="./medya/p1.jpg" data-fancybox="gallery">
+        <img src="./medya/p1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r1.jpg" data-fancybox="gallery">
-        <img src="/medya/r1.jpg" width="200px" />
+      <a href="./medya/r1.jpg" data-fancybox="gallery">
+        <img src="./medya/r1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t.jpg" data-fancybox="gallery">
-        <img src="/medya/t.jpg" width="200px" />
+      <a href="./medya/t.jpg" data-fancybox="gallery">
+        <img src="./medya/t.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t9.jpg" data-fancybox="gallery">
-        <img src="/medya/t9.jpg" width="200px" />
+      <a href="./medya/t9.jpg" data-fancybox="gallery">
+        <img src="./medya/t9.jpg" width="200px" />
       </a>
 
-      <a href="/medya/b2.jpg" data-fancybox="gallery">
-        <img src="/medya/b2.jpg" width="200px" />
+      <a href="./medya/b2.jpg" data-fancybox="gallery">
+        <img src="./medya/b2.jpg" width="200px" />
       </a>
 
-      <a href="/medya/brwn2.jpg" data-fancybox="gallery">
-        <img src="/medya/brwn2.jpg" width="200px" />
+      <a href="./medya/brwn2.jpg" data-fancybox="gallery">
+        <img src="./medya/brwn2.jpg" width="200px" />
       </a>
 
-      <a href="/medya/c2.jpg" data-fancybox="gallery">
-        <img src="/medya/c2.jpg" width="200px" />
+      <a href="./medya/c2.jpg" data-fancybox="gallery">
+        <img src="./medya/c2.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p10.jpg" data-fancybox="gallery">
-        <img src="/medya/p10.jpg" width="200px" />
+      <a href="./medya/p10.jpg" data-fancybox="gallery">
+        <img src="./medya/p10.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r10.jpg" data-fancybox="gallery">
-        <img src="/medya/r10.jpg" width="200px" />
+      <a href="./medya/r10.jpg" data-fancybox="gallery">
+        <img src="./medya/r10.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t1.jpg" data-fancybox="gallery">
-        <img src="/medya/t1.jpg" width="200px" />
+      <a href="./medya/t1.jpg" data-fancybox="gallery">
+        <img src="./medya/t1.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t8.jpg" data-fancybox="gallery">
-        <img src="/medya/t8.jpg" width="200px" />
+      <a href="./medya/t8.jpg" data-fancybox="gallery">
+        <img src="./medya/t8.jpg" width="200px" />
       </a>
 
-      <a href="/medya/b3.jpg" data-fancybox="gallery">
-        <img src="/medya/b3.jpg" width="200px" />
+      <a href="./medya/b3.jpg" data-fancybox="gallery">
+        <img src="./medya/b3.jpg" width="200px" />
       </a>
 
-      <a href="/medya/brwn3.jpg" data-fancybox="gallery">
-        <img src="/medya/brwn3.jpg" width="200px" />
+      <a href="./medya/brwn3.jpg" data-fancybox="gallery">
+        <img src="./medya/brwn3.jpg" width="200px" />
       </a>
 
-      <a href="/medya/c3.jpg" data-fancybox="gallery">
-        <img src="/medya/c3.jpg" width="200px" />
+      <a href="./medya/c3.jpg" data-fancybox="gallery">
+        <img src="./medya/c3.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p12.jpg" data-fancybox="gallery">
-        <img src="/medya/p12.jpg" width="200px" />
+      <a href="./medya/p12.jpg" data-fancybox="gallery">
+        <img src="./medya/p12.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p13.jpg" data-fancybox="gallery">
-        <img src="/medya/p13.jpg" width="200px" />
+      <a href="./medya/p13.jpg" data-fancybox="gallery">
+        <img src="./medya/p13.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r12.jpg" data-fancybox="gallery">
-        <img src="/medya/r12.jpg" width="200px" />
+      <a href="./medya/r12.jpg" data-fancybox="gallery">
+        <img src="./medya/r12.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t12.jpg" data-fancybox="gallery">
-        <img src="/medya/t12.jpg" width="200px" />
+      <a href="./medya/t12.jpg" data-fancybox="gallery">
+        <img src="./medya/t12.jpg" width="200px" />
       </a>
 
-      <a href="/medya/b4.jpg" data-fancybox="gallery">
-        <img src="/medya/b4.jpg" width="200px" />
+      <a href="./medya/b4.jpg" data-fancybox="gallery">
+        <img src="./medya/b4.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p9.jpg" data-fancybox="gallery">
-        <img src="/medya/p9.jpg" width="200px" />
+      <a href="./medya/p9.jpg" data-fancybox="gallery">
+        <img src="./medya/p9.jpg" width="200px" />
       </a>
 
-      <a href="/medya/c5.jpg" data-fancybox="gallery">
-        <img src="/medya/c5.jpg" width="200px" />
+      <a href="./medya/c5.jpg" data-fancybox="gallery">
+        <img src="./medya/c5.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t7.jpg" data-fancybox="gallery">
-        <img src="/medya/t7.jpg" width="200px" />
+      <a href="./medya/t7.jpg" data-fancybox="gallery">
+        <img src="./medya/t7.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r5.jpg" data-fancybox="gallery">
-        <img src="/medya/r5.jpg" width="200px" />
+      <a href="./medya/r5.jpg" data-fancybox="gallery">
+        <img src="./medya/r5.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p15.jpg" data-fancybox="gallery">
-        <img src="/medya/p15.jpg" width="200px" />
+      <a href="./medya/p15.jpg" data-fancybox="gallery">
+        <img src="./medya/p15.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t15.jpg" data-fancybox="gallery">
-        <img src="/medya/t15.jpg" width="200px" />
+      <a href="./medya/t15.jpg" data-fancybox="gallery">
+        <img src="./medya/t15.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p14.jpg" data-fancybox="gallery">
-        <img src="/medya/p14.jpg" width="200px" />
+      <a href="./medya/p14.jpg" data-fancybox="gallery">
+        <img src="./medya/p14.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t14.jpg" data-fancybox="gallery">
-        <img src="/medya/t14.jpg" width="200px" />
+      <a href="./medya/t14.jpg" data-fancybox="gallery">
+        <img src="./medya/t14.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p13.jpg" data-fancybox="gallery">
-        <img src="/medya/p13.jpg" width="200px" />
+      <a href="./medya/p13.jpg" data-fancybox="gallery">
+        <img src="./medya/p13.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t13.jpg" data-fancybox="gallery">
-        <img src="/medya/t13.jpg" width="200px" />
+      <a href="./medya/t13.jpg" data-fancybox="gallery">
+        <img src="./medya/t13.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p12.jpg" data-fancybox="gallery">
-        <img src="/medya/p12.jpg" width="200px" />
+      <a href="./medya/p12.jpg" data-fancybox="gallery">
+        <img src="./medya/p12.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t12.jpg" data-fancybox="gallery">
-        <img src="/medya/t12.jpg" width="200px" />
+      <a href="./medya/t12.jpg" data-fancybox="gallery">
+        <img src="./medya/t12.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p10.jpg" data-fancybox="gallery">
-        <img src="/medya/p10.jpg" width="200px" />
+      <a href="./medya/p10.jpg" data-fancybox="gallery">
+        <img src="./medya/p10.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t11.jpg" data-fancybox="gallery">
-        <img src="/medya/t11.jpg" width="200px" />
+      <a href="./medya/t11.jpg" data-fancybox="gallery">
+        <img src="./medya/t11.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p23.jpg" data-fancybox="gallery">
-        <img src="/medya/p23.jpg" width="200px" />
+      <a href="./medya/p23.jpg" data-fancybox="gallery">
+        <img src="./medya/p23.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t23.jpg" data-fancybox="gallery">
-        <img src="/medya/t23.jpg" width="200px" />
+      <a href="./medya/t23.jpg" data-fancybox="gallery">
+        <img src="./medya/t23.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p24.jpg" data-fancybox="gallery">
-        <img src="/medya/p24.jpg" width="200px" />
+      <a href="./medya/p24.jpg" data-fancybox="gallery">
+        <img src="./medya/p24.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p20.jpg" data-fancybox="gallery">
-        <img src="/medya/p20.jpg" width="200px" />
+      <a href="./medya/p20.jpg" data-fancybox="gallery">
+        <img src="./medya/p20.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t20.jpg" data-fancybox="gallery">
-        <img src="/medya/t20.jpg" width="200px" />
+      <a href="./medya/t20.jpg" data-fancybox="gallery">
+        <img src="./medya/t20.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p18.jpg" data-fancybox="gallery">
-        <img src="/medya/p18.jpg" width="200px" />
+      <a href="./medya/p18.jpg" data-fancybox="gallery">
+        <img src="./medya/p18.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t18.jpg" data-fancybox="gallery">
-        <img src="/medya/t18.jpg" width="200px" />
+      <a href="./medya/t18.jpg" data-fancybox="gallery">
+        <img src="./medya/t18.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p19.jpg" data-fancybox="gallery">
-        <img src="/medya/p19.jpg" width="200px" />
+      <a href="./medya/p19.jpg" data-fancybox="gallery">
+        <img src="./medya/p19.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t30.jpg" data-fancybox="gallery">
-        <img src="/medya/t30.jpg" width="200px" />
+      <a href="./medya/t30.jpg" data-fancybox="gallery">
+        <img src="./medya/t30.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p22.jpg" data-fancybox="gallery">
-        <img src="/medya/p22.jpg" width="200px" />
+      <a href="./medya/p22.jpg" data-fancybox="gallery">
+        <img src="./medya/p22.jpg" width="200px" />
       </a>
 
-      <a href="/medya/c5.jpg" data-fancybox="gallery">
-        <img src="/medya/c5.jpg" width="200px" />
+      <a href="./medya/c5.jpg" data-fancybox="gallery">
+        <img src="./medya/c5.jpg" width="200px" />
       </a>
 
-      <a href="/medya/brwn4.jpg" data-fancybox="gallery">
-        <img src="/medya/brwn4.jpg" width="200px" />
+      <a href="./medya/brwn4.jpg" data-fancybox="gallery">
+        <img src="./medya/brwn4.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r4.jpg" data-fancybox="gallery">
-        <img src="/medya/r4.jpg" width="200px" />
+      <a href="./medya/r4.jpg" data-fancybox="gallery">
+        <img src="./medya/r4.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r3.jpg" data-fancybox="gallery">
-        <img src="/medya/r3.jpg" width="200px" />
+      <a href="./medya/r3.jpg" data-fancybox="gallery">
+        <img src="./medya/r3.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p28.jpg" data-fancybox="gallery">
-        <img src="/medya/p28.jpg" width="200px" />
+      <a href="./medya/p28.jpg" data-fancybox="gallery">
+        <img src="./medya/p28.jpg" width="200px" />
       </a>
-      <a href="/medya/p27.jpg" data-fancybox="gallery">
-        <img src="/medya/p27.jpg" width="200px" />
-      </a>
-
-      <a href="/medya/t28.jpg" data-fancybox="gallery">
-        <img src="/medya/t28.jpg" width="200px" />
+      <a href="./medya/p27.jpg" data-fancybox="gallery">
+        <img src="./medya/p27.jpg" width="200px" />
       </a>
 
-      <a href="/medya/t26.jpg" data-fancybox="gallery">
-        <img src="/medya/t26.jpg" width="200px" />
+      <a href="./medya/t28.jpg" data-fancybox="gallery">
+        <img src="./medya/t28.jpg" width="200px" />
       </a>
 
-      <a href="/medya/p26.jpg" data-fancybox="gallery">
-        <img src="/medya/p26.jpg" width="200px" />
+      <a href="./medya/t26.jpg" data-fancybox="gallery">
+        <img src="./medya/t26.jpg" width="200px" />
       </a>
 
-      <a href="/medya/r5.jpg" data-fancybox="gallery">
-        <img src="/medya/r5.jpg" width="200px" />
+      <a href="./medya/p26.jpg" data-fancybox="gallery">
+        <img src="./medya/p26.jpg" width="200px" />
+      </a>
+
+      <a href="./medya/r5.jpg" data-fancybox="gallery">
+        <img src="./medya/r5.jpg" width="200px" />
       </a>
 
 
