--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <a class="navbar-brand"
         href="https://www.instagram.com/kizilayprotez.pinar?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
-        <img src="/medya/logo.jpg" width="50rem" style="border-radius: 50%;" alt="">
+        <img src="./medya/logo.jpg" width="50rem" style="border-radius: 50%;" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
